# start-django

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  justfile  pyproject.toml  requirements.txt  sitemap.xml  tailwind.config.js
.github/workflows/: main.yml
components/design/: index.html
components/start/msg/: index.html
components/start/select/: index.html
contexts/container/: index.html
contexts/ide/: index.html
contexts/local/: index.html
contexts/overview/: index.html
contexts/repl/: index.html
contexts/repo/: index.html
contexts/site/: index.html
deploy/: compose.debug.yml  env.common.tpl  env.fly.tpl
deploy/config/: index.html
deploy/deploy/: index.html
deploy/do/: index.html
deploy/pg/: Dockerfile  fly.toml
deploy/prep/: index.html
deploy/sq/: Dockerfile  fly.toml
design/: index.html
docs/: design.md  index.md
docs/components/: design.md
docs/components/start/: msg.md  select.md
docs/contexts/: container.md  ide.md  local.md  overview.md  repl.md  repo.md  site.md
docs/deploy/: config.md  deploy.md  do.md  prep.md
docs/extra/: production-server.md  reactive-htmx.md  request-response.md  web.md  why.md
docs/references/: conventions.md  env-vars.md  gotchas.md  personalization.md  settings.md  tailwind-setup.md
docs/setup/: auth-email.md  auth-fb.md  auth-github.md  auth-google.md  auth-social.md  background-tasks.md  cloudflare-images.md  email-postmark.md  summary.md  use-postgres.md  user-model.md
etc/: env.example.0.dev  env.example.0.dev-op  env.example.1.debug  env.example.2.fly  mkdocs.yml
extra/production-server/: index.html
extra/reactive-htmx/: index.html
extra/request-response/: index.html
extra/web/: index.html
extra/why/: index.html
references/conventions/: index.html
references/env-vars/: index.html
references/gotchas/: index.html
references/personalization/: index.html
references/settings/: index.html
references/tailwind-setup/: index.html
search/: search_index.json
setup/auth-email/: index.html
setup/auth-fb/: index.html
setup/auth-github/: index.html
setup/auth-google/: index.html
setup/auth-social/: index.html
setup/background-tasks/: index.html
setup/cloudflare-images/: index.html
setup/email-postmark/: index.html
setup/summary/: index.html
setup/use-postgres/: index.html
setup/user-model/: index.html
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: __init__.py  _auth.py  _settings.py
src/pages/: admin.py  forms.py  managers.py  models.py  tasks.py  urls.py  views.py
src/pages/fixtures/: home.yml  legal.yml  x.yml
src/profiles/: adapters.py  admin.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
src/scripts/: debug.sh  run.sh  web.sh  worker.sh
src/templates/: _msg.html  _nav.html  base.html
src/tests/: conftest.py
(+71 files in other folders)
